<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>timer_experiments</name>
  <version>0.0.0</version>
  <description>Apache 2.0</description>
  <maintainer email="pythagora.yoshimoto@gmail.com">hans</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>magic_enum</depend>
<!--  <depend>irobot_events_executor</depend>-->
<!--  <depend>irobot_lock_free_events_queue</depend>-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
